--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sqlite3": "^5.1.7"
   },
   "dependencies": {
+    "@knocklabs/node": "^1.25.0",
     "@prisma/client": "^6.16.3",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
@@ -24,6 +25,7 @@
     "express": "^5.1.0",
     "formdata-node": "^6.0.3",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "resend": "^6.6.0"
   }
 }
