--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "formdata-node": "^6.0.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
+    "serverless-http": "^4.0.0",
     "ws": "^8.18.3"
   }
 }
