--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node ./api/index.js",
     "dev": "nodemon ./api/index.js",
     "postinstall": "prisma generate"
   },
