--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-list-endpoints": "^7.1.1",
     "formdata-node": "^6.0.3",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.12",
